@@ -1,3 +1,7 @@
+2010-09-08  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amserverconfig.pl: use RUNNING_AS_ANY and
+					set dumpuser in amanda.conf.
+
 2010-09-07  Dustin J. Mitchell <dustin@zmanda.com>
 	* common-src/alloc.c: remove unnecessary declaration of 'environ'
 
